--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,12 @@
         "yiisoft/yii2": "~2.0.6",
         "lcobucci/jwt": "~3.2.0"
     },
+    "autoload": {
+        "psr-4": {
+            "symo\\JWTAuth\\": "src/",
+            "symo\\JWTAuth\\exampales\\": "examples/"
+        }
+    },
     "license": "MIT",
     "authors": [
         {
